fix broken header after open search on mobile

--- a/test/dummy/app/components/dummy/ui/header_component.sass
+++ b/test/dummy/app/components/dummy/ui/header_component.sass
@@ -152,6 +152,9 @@
       margin-right: - $grid-gutter-half
       width: calc(100% + #{$grid-gutter-width})
 
+    &__toolbar
+      max-width: calc(100% - (#{map-get($spacers, bb)} + 32px))
+
     &__toolbar-dropdowns
       margin-left: - $grid-gutter-half
       margin-right: - $grid-gutter-half
